--- a/arch/arm/boot/dts/qcom/sdm660_lavender.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm660_lavender.dtsi
@@ -1,4 +1,4 @@
-/* Copyright (c) 2016-2019, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2016-2018, The Linux Foundation. All rights reserved.
  * Copyright (C) 2019 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -35,7 +35,7 @@
 
 	chosen {
 		stdout-path = "serial0";
-		bootargs = "rcupdate.rcu_expedited=1";
+		bootargs = "rcupdate.rcu_normal_after_boot=1 quiet noirqdebug";
 	};
 
 	psci {
@@ -51,18 +51,13 @@
 			device_type = "cpu";
 			compatible = "arm,kryo";
 			reg = <0x0 0x0>;
-<<<<<<< HEAD
-			clock-frequency = <1612800000>;
-=======
 			clock-frequency = <1843200000>;
->>>>>>> 8f4666fbffbd (dts: CPU OC Performance cluster -> 2.2GHz)
 			enable-method = "psci";
 			qcom,limits-info = <&mitigation_profile0>;
 			qcom,lmh-dcvs = <&lmh_dcvs0>;
 			#cooling-cells = <2>;
 			qcom,ea = <&ea0>;
 			efficiency = <1024>;
-			freq-energy-model;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			next-level-cache = <&L2_0>;
 			L2_0: l2-cache {
@@ -88,18 +83,13 @@
 			device_type = "cpu";
 			compatible = "arm,kryo";
 			reg = <0x0 0x1>;
-<<<<<<< HEAD
-			clock-frequency = <1612800000>;
-=======
 			clock-frequency = <1843200000>;
->>>>>>> 8f4666fbffbd (dts: CPU OC Performance cluster -> 2.2GHz)
 			enable-method = "psci";
 			qcom,limits-info = <&mitigation_profile0>;
 			qcom,lmh-dcvs = <&lmh_dcvs0>;
 			#cooling-cells = <2>;
 			qcom,ea = <&ea1>;
 			efficiency = <1024>;
-			freq-energy-model;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			next-level-cache = <&L2_0>;
 			L1_I_1: l1-icache {
@@ -119,18 +109,13 @@
 			device_type = "cpu";
 			compatible = "arm,kryo";
 			reg = <0x0 0x2>;
-<<<<<<< HEAD
-			clock-frequency = <1612800000>;
-=======
 			clock-frequency = <1843200000>;
->>>>>>> 8f4666fbffbd (dts: CPU OC Performance cluster -> 2.2GHz)
 			enable-method = "psci";
 			qcom,limits-info = <&mitigation_profile0>;
 			qcom,lmh-dcvs = <&lmh_dcvs0>;
 			#cooling-cells = <2>;
 			qcom,ea = <&ea2>;
 			efficiency = <1024>;
-			freq-energy-model;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			next-level-cache = <&L2_0>;
 			L1_I_2: l1-icache {
@@ -150,18 +135,13 @@
 			device_type = "cpu";
 			compatible = "arm,kryo";
 			reg = <0x0 0x3>;
-<<<<<<< HEAD
-			clock-frequency = <1612800000>;
-=======
 			clock-frequency = <1843200000>;
->>>>>>> 8f4666fbffbd (dts: CPU OC Performance cluster -> 2.2GHz)
 			enable-method = "psci";
 			qcom,limits-info = <&mitigation_profile0>;
 			qcom,lmh-dcvs = <&lmh_dcvs0>;
 			#cooling-cells = <2>;
 			qcom,ea = <&ea3>;
 			efficiency = <1024>;
-			freq-energy-model;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			next-level-cache = <&L2_0>;
 			L1_I_3: l1-icache {
@@ -181,18 +161,13 @@
 			device_type = "cpu";
 			compatible = "arm,kryo";
 			reg = <0x0 0x100>;
-<<<<<<< HEAD
-			clock-frequency = <1804800000>;
-=======
 			clock-frequency = <2208000000>;
->>>>>>> 8f4666fbffbd (dts: CPU OC Performance cluster -> 2.2GHz)
 			enable-method = "psci";
 			qcom,limits-info = <&mitigation_profile1>;
 			qcom,lmh-dcvs = <&lmh_dcvs1>;
 			#cooling-cells = <2>;
 			qcom,ea = <&ea4>;
 			efficiency = <1638>;
-			freq-energy-model;
 			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			next-level-cache = <&L2_1>;
 			L2_1: l2-cache {
@@ -216,18 +191,13 @@
 			device_type = "cpu";
 			compatible = "arm,kryo";
 			reg = <0x0 0x101>;
-<<<<<<< HEAD
-			clock-frequency = <1804800000>;
-=======
 			clock-frequency = <2208000000>;
->>>>>>> 8f4666fbffbd (dts: CPU OC Performance cluster -> 2.2GHz)
 			enable-method = "psci";
 			qcom,limits-info = <&mitigation_profile2>;
 			qcom,lmh-dcvs = <&lmh_dcvs1>;
 			#cooling-cells = <2>;
 			qcom,ea = <&ea5>;
 			efficiency = <1638>;
-			freq-energy-model;
 			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			next-level-cache = <&L2_1>;
 			L1_I_101: l1-icache {
@@ -247,18 +217,13 @@
 			device_type = "cpu";
 			compatible = "arm,kryo";
 			reg = <0x0 0x102>;
-<<<<<<< HEAD
-			clock-frequency = <1804800000>;
-=======
 			clock-frequency = <2208000000>;
->>>>>>> 8f4666fbffbd (dts: CPU OC Performance cluster -> 2.2GHz)
 			enable-method = "psci";
 			qcom,limits-info = <&mitigation_profile3>;
 			qcom,lmh-dcvs = <&lmh_dcvs1>;
 			#cooling-cells = <2>;
 			qcom,ea = <&ea6>;
 			efficiency = <1638>;
-			freq-energy-model;
 			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			next-level-cache = <&L2_1>;
 			L1_I_102: l1-icache {
@@ -278,18 +243,13 @@
 			device_type = "cpu";
 			compatible = "arm,kryo";
 			reg = <0x0 0x103>;
-<<<<<<< HEAD
-			clock-frequency = <1804800000>;
-=======
 			clock-frequency = <2208000000>;
->>>>>>> 8f4666fbffbd (dts: CPU OC Performance cluster -> 2.2GHz)
 			enable-method = "psci";
 			qcom,limits-info = <&mitigation_profile4>;
 			qcom,lmh-dcvs = <&lmh_dcvs1>;
 			#cooling-cells = <2>;
 			qcom,ea = <&ea7>;
 			efficiency = <1638>;
-			freq-energy-model;
 			sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
 			next-level-cache = <&L2_1>;
 			L1_I_103: l1-icache {
@@ -345,75 +305,69 @@
 	};
 
 		energy_costs: energy-costs {
-		compatible = "sched-energy";
+			compatible = "sched-energy";
 
-		CPU_COST_0: core-cost0 {
-			busy-cost-data = <
-                                 300000 11
-                                 633600 23
-				 902400 139
-				1113600 259
-				1401600 482
-				1536000 690
-                                1612800 725
-				1747200 870
-				1843200 1102
-			>;
-			idle-cost-data = <
-				20 16 12 8
-			>;
+			CPU_COST_0: core-cost0 {
+				busy-cost-data = <
+					633600  41
+					902400  70
+					1113600 83
+					1401600 146
+					1536000 158
+					1612800 183
+					1747200 228
+					1843200 285
+				>;
+				idle-cost-data = <
+					20 16 12 8
+				>;
+			};
+			CPU_COST_1: core-cost1 {
+				busy-cost-data = <
+					1113600 307
+					1401600 485
+					1747200 857
+					1804800 883
+					1958400 1222
+					2150400 1592
+					2208000 1632
+					2457600 2080
+				>;
+				idle-cost-data = <
+					100 80 60 40
+				>;
+			};
+			CLUSTER_COST_0: cluster-cost0 {
+				busy-cost-data = <
+					633600  4
+					902400  5
+					1113600 7
+					1401600 9
+					1536000 9
+					1612800 10
+					1747200 11
+					1843200 13
+				>;
+				idle-cost-data = <
+					4 3 2 1
+				>;
+			};
+			CLUSTER_COST_1: cluster-cost1 {
+				busy-cost-data = <
+					1113600 14
+					1401600 17
+					1747200 25
+					1804800 31
+					1958400 31
+					2150400 37
+					2208000 44
+					2457600 45
+				>;
+				idle-cost-data = <
+					4 3 2 1
+				>;
+			};
 		};
-		CPU_COST_1: core-cost1 {
-			busy-cost-data = <
-                                 300000 128
-                                 633600 138
-				 902400 268
-				1113600 749
-				1401600 1443
-				1747200 2576
-                                1804800 2661
-				1958400 4153
-				2150400 5941
-				2208000 6688
-			>;
-			idle-cost-data = <
-				100 80 60 40
-			>;
-		};
-		CLUSTER_COST_0: cluster-cost0 {
-			busy-cost-data = <
-                                 300000 4
-				 633600 8
-				 902400 14
-				1113600 20
-				1401600 29
-				1536000 35
-                                1612800 37
-				1747200 49
-				1843200 62
-			>;
-			idle-cost-data = <
-				4 3 2 1
-			>;
-		};
-		CLUSTER_COST_1: cluster-cost1 {
-			busy-cost-data = <
-                                 300000 26
-                                 633600 44
-				 902400 105
-				1113600 135
-				1401600 193
-				1747200 272
-                                1804800 281
-				1958400 363
-				2150400 519
-				2208000 585
-			>;
-			idle-cost-data = <
-				4 3 2 1
-			>;
-		};
-	};
 
 	clocks {
 		xo_board {
@@ -438,14 +392,6 @@
 			compatible = "android,firmware";
 			fstab {
 				compatible = "android,fstab";
-				system {
-					compatible = "android,system";
-					dev = "/dev/block/platform/soc/c0c4000.sdhci/by-name/system";
-					type = "ext4";
-					mnt_flags = "ro,barrier=1,discard";
-					fsmgr_flags = "wait";
-					status = "ok";
-				};
 				vendor {
 					compatible = "android,vendor";
 					dev = "/dev/block/platform/soc/c0c4000.sdhci/by-name/vendor";
@@ -548,12 +494,12 @@
 		};
 
 		cont_splash_mem: splash_region@9d400000 {
-			reg = <0x0 0x9d400000 0x0 0x23ff000>;
+			reg = <0x0 0x9d400000 0x0 0x02400000>;
 			label = "cont_splash_mem";
 		};
 
 		dfps_data_mem: dfps_data_mem@0x9f7ff000 {
-		       reg = <0 0x9f800000 0 0x00001000>;
+		       reg = <0 0x9f8ff000 0 0x00001000>;
 		       label = "dfps_data_mem";
 		};
 
@@ -800,7 +746,7 @@
 			compatible = "qcom,memshare-peripheral";
 			qcom,peripheral-size = <0x0>;
 			qcom,client-id = <1>;
-			qcom,allocate-on-request;
+			qcom,allocate-boot-time;
 			label = "modem";
 		};
 	};
@@ -981,7 +927,7 @@
 	qcom,msm-thermal {
 		compatible = "qcom,msm-thermal";
 		qcom,sensor-id = <1>;
-		qcom,poll-ms = <100>;
+		qcom,poll-ms = <1000>;
 		qcom,therm-reset-temp = <115>;
 		qcom,core-limit-temp = <70>;
 		qcom,core-temp-hysteresis = <10>;
@@ -995,7 +941,6 @@
 		clock-names = "osm";
 		clocks = <&clock_cpu PWRCL_CLK>;
 		qcom,cxip-lm-enable = <1>;
-		qcom,disable-vdd-rstr;
 		qcom,vdd-restriction-temp = <5>;
 		qcom,vdd-restriction-temp-hysteresis = <10>;
 
@@ -1383,8 +1328,7 @@
 		qcom,cpulist = <&CPU0 &CPU1 &CPU2 &CPU3>;
 		qcom,target-dev = <&memlat_cpu0>;
 		qcom,core-dev-table =
-			< 300000 381 >,
-                        < 902400 762 >,
+			< 902400 762 >,
 			< 1401600 2086 >,
 			< 1843200 3879 >;
 	};
@@ -1394,9 +1338,6 @@
 		qcom,cpulist = <&CPU4 &CPU5 &CPU6 &CPU7>;
 		qcom,target-dev = <&memlat_cpu4>;
 		qcom,core-dev-table =
-                      < 300000 381 >,
-                      < 633600 572 >,
-			< 902400 762 >,
 			< 1113600 762 >,
 			< 1401600 3879 >,
 			< 2150400 5931 >,
@@ -1407,20 +1348,26 @@
 		mincpubw-cpufreq {
 			target-dev = <&mincpubw>;
 			cpu-to-dev-map-0 =
-                                < 300000 381 >,
 				< 633600 762 >,
 				< 1401600 1571 >,
 				< 1843200 2929 >;
 			cpu-to-dev-map-4 =
-                                < 300000 381 >,
-				< 633600 572 >,
-				< 902400 762 >,
 				< 1113600 762 >,
 				< 1401600 2086 >,
 				< 1747200 2929 >,
 				< 2150400 3879 >,
 				< 2208000 6881 >;
 		};
+	};
+
+	devfreq_compute: qcom,devfreq-compute {
+		compatible = "qcom,arm-cpu-mon";
+		qcom,cpulist = <&CPU0 &CPU1 &CPU2 &CPU3>;
+		qcom,target-dev = <&mincpubw>;
+		qcom,core-dev-table =
+                        < 902400 762 >,
+                        < 1401600 2086 >,
+                        < 1843200 3879 >;
 	};
 
 	clock_cpu: qcom,clk-cpu-660@179c0000 {
@@ -1477,49 +1424,28 @@
 			<  1401600000 0x04040049 0x073a003a 0x2 5 >,
 			<  1536000000 0x04040050 0x08400040 0x2 6 >,
 			<  1747200000 0x0404005b 0x09480048 0x2 7 >,
-			<  1843200000 0x04040060 0x094c004c 0x3 8 >;
+			<  2208000000 0x04040073 0x0b5c005c 0x3 6 >;
 
 		qcom,perfcl-speedbin0-v0 =
 			<   300000000 0x0004000f 0x01200020 0x1 1 >,
-			<   633600000 0x05040021 0x03200020 0x1 2 >,
-			<   902400000 0x0404002f 0x04260026 0x1 3 >,
-			<  1113600000 0x0404003a 0x052e002e 0x2 4 >,
-			<  1401600000 0x04040049 0x073a003a 0x2 5 >,
-			<  1747200000 0x0404005b 0x09480048 0x2 6 >,
-			<  1958400000 0x04040066 0x0a510051 0x2 7 >,
-			<  2150400000 0x04040070 0x0b590059 0x3 8 >,
-			<  2457600000 0x04040080 0x0c660066 0x3 9 >;
+			<  1113600000 0x0404003a 0x052e002e 0x1 2 >,
+			<  1401600000 0x04040049 0x073a003a 0x2 3 >,
+			<  1747200000 0x0404005b 0x09480048 0x2 4 >,
+			<  1958400000 0x04040066 0x0a510051 0x2 5 >,
+			<  2150400000 0x04040070 0x0b590059 0x2 6 >,
+			<  2208000000 0x04040073 0x0b5c005c 0x3 6 >;
 
 		qcom,perfcl-speedbin1-v0 =
 			<   300000000 0x0004000f 0x01200020 0x1 1 >,
-			<   633600000 0x05040021 0x03200020 0x1 2 >,
-			<   902400000 0x0404002f 0x04260026 0x1 3 >,
-			<  1113600000 0x0404003a 0x052e002e 0x2 4 >,
-			<  1401600000 0x04040049 0x073a003a 0x2 5 >,
-			<  1747200000 0x0404005b 0x09480048 0x2 6 >,
-			<  1958400000 0x04040066 0x0a510051 0x2 7 >,
-			<  2150400000 0x04040070 0x0b590059 0x3 8 >,
-			<  2208000000 0x04040073 0x0b5c005c 0x3 9 >;
+			<  1113600000 0x0404003a 0x052e002e 0x1 2 >,
+			<  1401600000 0x04040049 0x073a003a 0x2 3 >,
+			<  1747200000 0x0404005b 0x09480048 0x2 4 >,
+			<  1958400000 0x04040066 0x0a510051 0x2 5 >,
+			<  2150400000 0x04040070 0x0b590059 0x2 6 >,
+			<  2208000000 0x04040073 0x0b5c005c 0x3 7 >;
 
 		qcom,perfcl-speedbin3-v0 =
 			<   300000000 0x0004000f 0x01200020 0x1 1 >,
-<<<<<<< HEAD
-			<   633600000 0x05040021 0x03200020 0x1 2 >,
-			<   902400000 0x0404002f 0x04260026 0x1 3 >,
-			<  1113600000 0x0404003a 0x052e002e 0x2 4 >,
-			<  1401600000 0x04040049 0x073a003a 0x2 5 >,
-			<  1747200000 0x0404005b 0x09480048 0x2 6 >,
-			<  1804800000 0x0404005e 0x094b004b 0x2 7 >;
-
-		qcom,perfcl-speedbin4-v0 =
-			<   300000000 0x0004000f 0x01200020 0x1 1 >,
-			<   633600000 0x05040021 0x03200020 0x1 2 >,
-			<   902400000 0x0404002f 0x04260026 0x1 3 >,
-			<  1113600000 0x0404003a 0x052e002e 0x2 4 >,
-			<  1401600000 0x04040049 0x073a003a 0x2 5 >,
-			<  1747200000 0x0404005b 0x09480048 0x2 6 >,
-			<  1958400000 0x04040066 0x0a510051 0x2 7 >;
-=======
 			<  1113600000 0x0404003a 0x052e002e 0x1 2 >,
 			<  1401600000 0x04040049 0x073a003a 0x2 3 >,
 			<  1747200000 0x0404005b 0x09480048 0x2 4 >,
@@ -1533,7 +1459,6 @@
 			<  1747200000 0x0404005b 0x09480048 0x2 4 >,
 			<  1958400000 0x04040066 0x0a510051 0x2 5 >,
 			<  2208000000 0x04040073 0x0b5c005c 0x3 6 >;
->>>>>>> 8f4666fbffbd (dts: CPU OC Performance cluster -> 2.2GHz)
 
 		qcom,up-timer = <1000 1000>;
 		qcom,down-timer = <1000 1000>;
@@ -1582,22 +1507,24 @@
 		qcom,governor-per-policy;
 
 		qcom,cpufreq-table-0 =
-                        <  300000 >,
 			<  633600 >,
 			<  902400 >,
 			< 1113600 >,
 			< 1401600 >,
 			< 1536000 >,
-			< 1612800 >;
+			< 1612800 >,
+			< 1747200 >,
+			< 1843200 >;
 
 		qcom,cpufreq-table-4 =
-                        <  300000 >,
-			<  633600 >,
-			<  902400 >,
 			< 1113600 >,
 			< 1401600 >,
 			< 1747200 >,
-			< 1804800 >;
+			< 1804800 >,
+			< 1958400 >,
+			< 2150400 >,
+			< 2208000 >,
+			< 2457600 >;
 	};
 
 	sdhc_1: sdhci@c0c4000 {
@@ -2604,6 +2531,10 @@
 		"HS_RB_G1_L1", "HS_RB_G2_L1", "HS_RB_G3_L1",
 		"MAX";
 
+		pinctrl-names = "dev-reset-assert", "dev-reset-deassert";
+		pinctrl-0 = <&ufs_dev_reset_assert>;
+		pinctrl-1 = <&ufs_dev_reset_deassert>;
+
 		resets = <&clock_gcc GCC_UFS_BCR>;
 		reset-names = "core_reset";
 
@@ -2721,7 +2652,7 @@
 
 #include "sdm660-ion.dtsi"
 #include "sdm660-bus.dtsi"
-#include "msm-pm660_e7s.dtsi"
+#include "msm-pm660_lavender.dtsi"
 #include "msm-pm660l.dtsi"
 #include "msm-pm660-rpm-regulator.dtsi"
 #include "msm-pm660l-rpm-regulator.dtsi"
@@ -2819,7 +2750,7 @@
 
 #include "msm-arm-smmu-660.dtsi"
 #include "msm-arm-smmu-impl-defs-660.dtsi"
-#include "sdm660-common_e7s.dtsi"
+#include "sdm660-common.dtsi"
 #include "sdm660-blsp.dtsi"
 #include "msm-rdbg.dtsi"
 #include "sdm660-camera.dtsi"
@@ -2886,3 +2817,4 @@
 
 #include "sdm660-mdss.dtsi"
 #include "sdm660-mdss-pll.dtsi"
+#include "sdm660-thermal.dtsi"
