--- a/arch/arm64/configs/ck_defconfig
+++ b/arch/arm64/configs/ck_defconfig
@@ -45,7 +45,7 @@ CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_LZ4 is not set
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_MEMBARRIER is not set
-CONFIG_LTO=y
+CONFIG_LTO=n
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
