--- a/arch/arm64/configs/ck_defconfig
+++ b/arch/arm64/configs/ck_defconfig
@@ -1,6 +1,6 @@
 CONFIG_THERMAL_SWITCH=y
 CONFIG_KERNEL_CUSTOM_E7S=y
-CONFIG_LOCALVERSION="-Predator-R1.0"
+CONFIG_LOCALVERSION="-CK"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT is not set
@@ -524,7 +524,6 @@ CONFIG_MSM_CAMERA=y
 CONFIG_PATCH_GCAM_FREEZE=y
 CONFIG_MSMB_CAMERA=y
 CONFIG_MSM_CAMERA_SENSOR=y
-CONFIG_XIAOMI_NEW_CAMERA_BLOBS=n
 CONFIG_MSM_CPP=y
 CONFIG_MSM_CCI=y
 CONFIG_MSM_CSI20_HEADER=y
