--- a/arch/arm64/configs/ck-new_defconfig
+++ b/arch/arm64/configs/ck-new_defconfig
@@ -1,6 +1,6 @@
 CONFIG_THERMAL_SWITCH=y
 CONFIG_KERNEL_CUSTOM_E7S=y
-CONFIG_LOCALVERSION="-CK"
+CONFIG_LOCALVERSION="-Strife"
 CONFIG_XIAOMI_NEW_CAMERA_BLOBS=y
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
