--- a/arch/arm64/configs/cknew_defconfig
+++ b/arch/arm64/configs/cknew_defconfig
@@ -65,6 +65,24 @@ CONFIG_PARTITION_ADVANCED=y
 CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_MAPLE=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_FIFO=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_TRIPNDROID=y
+CONFIG_IOSCHED_DEPRESSION=y
+# CONFIG_DEFAULT_DEADLINE is not set
+CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_BFQ is not set
+# CONFIG_DEFAULT_ANXIETY is not set
+# CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_MAPLE is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_FIFO is not set
+# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_TRIPNDROID is not set
+# CONFIG_DEFAULT_DEPRESSION is not set
 CONFIG_IOSCHED_SWITCHER=y
 CONFIG_ARCH_QCOM=y
 CONFIG_ARCH_SDM660=y
